# distl

./: .gitignore  .travis.yml  README.md  mkdocs.yml  pyproject.toml  setup.py
distl/: __init__.py  distl.py  io.py
docs/: api.md  index.md  make_apidocs.py  make_ipynbdocs.sh
docs/api/: BaseAroundGenerator.__init__.md  BaseAroundGenerator.arccos.md  BaseAroundGenerator.arcsin.md  BaseAroundGenerator.arctan.md  BaseAroundGenerator.arctan2.md  BaseAroundGenerator.copy.md  BaseAroundGenerator.cos.md  BaseAroundGenerator.deepcopy.md  BaseAroundGenerator.hash.md  BaseAroundGenerator.label.md  BaseAroundGenerator.label_latex.md  BaseAroundGenerator.log.md  BaseAroundGenerator.log10.md  BaseAroundGenerator.md  BaseAroundGenerator.pdf.md  BaseAroundGenerator.plot.md  BaseAroundGenerator.plot_cdf.md  BaseAroundGenerator.plot_pdf.md  BaseAroundGenerator.plot_sample.md  BaseAroundGenerator.sample.md  BaseAroundGenerator.sin.md  BaseAroundGenerator.tan.md  BaseAroundGenerator.to.md  BaseAroundGenerator.to_dict.md  BaseAroundGenerator.to_file.md  BaseAroundGenerator.to_json.md  BaseAroundGenerator.to_si.md  BaseAroundGenerator.to_solar.md  BaseAroundGenerator.uniqueid.md  (+1432 more)
examples/: asini.py  custom_func.npdist  custom_function.py  delta_math.py  distribution_math.py  simple_gaussian.py  units.py
npdists/: __init__.py  npdists.py  stats_custom.py
paper/: paper.bib  paper.md
tests/: test_collections.py  test_delta.py  test_gaussian.py  test_histogram.py  test_methods.py  test_mvgaussian.py  test_mvhistogram.py  test_mvslice.py  test_normal.py  test_uniform.py
(+32 files in other folders)
